# knowledge_map

./: .dockerignore  .env.example  .gitignore  DATASETS_SETUP_SUMMARY.md  DVC_GUIDE.md  MOVE_BLOCKS_FEATURE.md  PROGRESS_REPORT.md  README.md  SCALE_FUNCTIONALITY_SUMMARY.md  TEST_STRUCTURE_SUMMARY.md  docker-compose.yaml  docker-compose.yml  project_strings_count.py  pyproject.toml  settings.json  start_local_dev.ps1  test_collision_resolution.py  test_move_simple.html  test_optimization.py  test_pinned_simple.py  test_scale_functionality.py  update_and_test.ps1  Карта Знаний. Проект.graphml
ai/: Dockerfile  README.md  pyproject.toml
ai/src/: __init__.py  ai_model_pb2.py  ai_model_pb2_grpc.py  annotation_engine.py  config.py  grpc_server.py  main.py  main_simple.py  models.py  pdf_processor.py
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  S3_INTEGRATION.md  TESTING_GUIDE.md  auth_client.py  auth_pb2.py  config.py  create_document.py  create_pdf_to_markdown_marker_proper.py  generate_proto.bat  init_s3_test_data.py  layout_client.py  main.py  models.py  pyproject.toml  pytest.ini  s3_client.py  schema.py  start_api.bat  test_pinned.py  uuid_v6_property.py
api/nlp/: __init__.py  base.py  multilevel_analyzer.py  nlp_manager.py  unified_types.py
api/proto/: ai_model.proto  layout.proto
api/services/: __init__.py  action_chain_service.py  ai_model_client.py  annotation_service.py  auth_client.py  auth_service.py  config.py  data_extraction_service.py  layout_client.py  layout_service.py  markdown_filter.py  marker_demo_client.py  marker_progress.py  multilevel_nlp_service.py  nlp_grpc_client.py  nlp_service.py  pattern_service.py  pdf_service.py  pdf_to_md_client.py  pdf_to_md_grpc_client.py  s3_client.py  status_storage.py  yaml_export_service.py
api/src/: app.py  middleware.py  models.py  schema.py
api/tests/: README.md  conftest.py
api/tools/: __init__.py
api/utils/: auth_pb2_grpc.py  hash_utils.py
auth/: .dockerignore  Dockerfile  README.md  generate_proto.bat  pyproject.toml
auth/proto/: auth.proto
auth/src/: config.py  grpc_server.py  main.py  models.py  schemas.py  user_service.py  utils.py
layering/: Dockerfile  README.md  pyproject.toml  start_layout_service.bat  test_algorithm.py  test_client.py
layering/proto/: layout.proto
layering/scripts/: generate_proto.bat  generate_proto.sh
layering/src/: __init__.py  grpc_service.py  layout_algorithm.py  layout_algorithm_distributed_demo.py  main.py
neo4j/: README.md  check_pinned.py  neo4j_backup_and_load.sh  populate_test_data.py  pyproject.toml  run_populate.py  test_data_verification.py
nlp/: DETAILED_PLAN.md  DOC.md  PLAN.md  README.md  pyproject.toml  Карта Знаний. Лингвистика.md  Карта Знаний. Не лингвистические сущности.md  Сравнение методов токенизации русского и английского текстов.md
nlp/proto/: nlp.proto
nlp/src/: base.py  config.py  grpc_server.py  main.old.py  morphemic_word_analysis.py  morphological_analysis.py  multilevel_analyzer.py  nlp_manager.py  nlp_pb2.py  nlp_pb2_grpc.py
nlp/tests/: Tests_checklist.md  conftest.py  test_linguistic_text_analysis.py  test_part_of_speech_tagging.py
notebooks/: .~lock.all_linguistic.ods#  README.md  action_dependency_extraction.ipynb  all_linguistic.ods  all_linguistic.py  nlp_compare_models.ipynb  preprocessing.py  pyproject.toml  spacy_all_linguistic_entities_exploryng.ipynb  spacy_dependency_visualization.html  spacy_entities_visualization.html  анализ_паттернов_преобразования_предложений.ipynb  сгенерировано_ии.ipynb
notebooks/action_dependency_extraction/: README.md  __init__.py  builders.py  exporters.py  extractors.py  extractors_improved.py  extractors_v3.py  markers.py  models.py  nominalization_data.py  utils.py
pdf_to_md/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  convert_docling_min.py  coordinate_based_extraction.py  demo_huridocs.py  download_huridocs_model.py  download_marker_models.py  main.py  pdf_to_md_marker_demo.py  pyproject.toml  pytest.ini
pdf_to_md/proto/: __init__.py  pdf_to_md.proto
pdf_to_md/scripts/: check_refactor.py  demo_testing.py  quick_test.py  run_tests.py  show_testing_capabilities.py  start_dev.py  start_grpc.py  test_coverage.py  warm_docling_cache.py
pdf_to_md/src/: __init__.py  ai_model_pb2.py  ai_model_pb2_grpc.py  app.py  grpc_app.py  grpc_server.py  main.py  pdf_to_md_pb2.py  pdf_to_md_pb2_grpc.py
pdf_to_md/tests/: __init__.py  conftest.py  test_app.py  test_file_management.py  test_pdf_conversion.py  test_s3_service.py
pdf_to_text/: .env.example  .gitignore  Dockerfile  Makefile  README.md  client_example.py  docker-compose.yml  pyproject.toml
pdf_to_text/proto/: pdf_to_text.proto
pdf_to_text/scripts/: generate_proto.bat
pdf_to_text/src/: __init__.py  grpc_server.py  main.py
pdf_to_text/tests/: test_docling_service.py
worker_data_to_db/: README.md  analyze_database.py  pubmed_baseline_ftp_downloader.py  pubmed_baseline_ftp_to_db.py  pubmed_baseline_generalization_structure_all_xml.py  pyproject.toml
worker_data_to_db/PubMed/: pubmed_baseline_ftp_to_db.py
worker_data_to_db/PubMed_Central/: pmc_oa_bulk_ftp_downloader.py  pmc_oa_bulk_generalization_structure_all_xml.py  pmc_oa_bulk_to_db.py
worker_data_to_db/tests/: __init__.py  test_reference_extraction.py
worker_distributed_layering/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  analyze_graph_structure.py  check_database_labels.py  check_node_article_mapping.py  clear_layout.py  create_indexes.py  docker-compose.distributed.yml  main.py  neo4j_connector.py  neo4j_procedures.py  pyproject.toml  run_layout_test.py  sync_coordinates.py  test_edge_count.py  test_longest_path_query.py  test_pinned_count.py  test_quick.py  worker.py  Предложения для ускорения укладки.md
worker_distributed_layering/cypher_procedures/: apoc_functions.cypher  graph_partitioning.cypher  simple_functions.cypher
worker_distributed_layering_rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  justfile  my_graph.gml
(+395 files in other folders)
