[project]
name = "knowledge-map"
version = "0.1.0"
description = ""
authors = [
    {name = "Dobrosvet",email = "dimaprokofev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spacy (>=3.8.7,<4.0.0) ; python_version >= \"3.12\" and python_version < \"3.14\"",
    "pyyaml (>=6.0.0,<7.0.0) ; python_version >= \"3.12\" and python_version < \"3.14\"",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
