[tool.poetry]
name = "knowledge-map-api"
version = "0.1.0"
description = ""
authors = ["Dobrosvet <dimaprokofev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
neomodel = "5.3.1"
strawberry-graphql = {extras = ["fastapi"], version = "0.219.0"}
fastapi = "0.104.1"
uvicorn = "0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
uuid6 = "^2025.0.0"
grpcio = "1.74.0"
grpcio-tools = "1.74.0"
protobuf = "6.31.1"
networkx = "^3.5"
aioboto3 = "^13.0.0"
aiofiles = "^24.1.0"
requests = "^2.32.4"
aiohttp = "^3.9.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
