[tool.poetry]
name = "knowledge-map-api"
version = "0.1.0"
description = ""
authors = ["Dobrosvet <dimaprokofev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
neomodel = "5.3.1"
strawberry-graphql = {extras = ["fastapi"], version = "0.219.0"}
fastapi = "0.104.1"
uvicorn = "0.24.0"
python-dotenv = "1.1.0"
pydantic = "2.11.7"
pydantic-settings = "2.9.1"
uuid6 = "2025.0.0"
grpcio = "1.74.0"
grpcio-tools = "1.74.0"
protobuf = "6.31.1"
networkx = "3.5"
aioboto3 = "13.4.0"
aiofiles = "24.1.0"
requests = "2.32.4"
aiohttp = "3.12.13"
python-multipart = "0.0.6"
psutil = "6.0.0"
pillow = "<11.0.0"
marker-pdf = "1.9.3"
spacy = {version = ">=3.8.7,<4.0", python = ">=3.12,<3.14"}
nltk = "^3.9.2"
stanza = "^1.11.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
