[tool.poetry]
name = "knowledge-map-layout-service"
version = "1.0.0"
description = "Микросервис для расчета укладки графа карты знаний"
authors = ["Knowledge Map Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
networkx = "^3.2"
protobuf = "^4.25.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-layout-service = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true 