[tool.poetry]
name = "knowledge-map-neo4j"
version = "0.1.0"
description = "Neo4j database population scripts for Knowledge Map"
authors = ["Dobrosvet <dimaprokofev@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
neomodel = "5.3.1"
python-dotenv = "^1.0.0"
uuid6 = "^2025.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 