[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "NLP microservice with multi-level linguistic analysis and voting system"
authors = ["Dobrosvet <dimaprokofev@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# gRPC dependencies
grpcio = "1.74.0"
grpcio-tools = "1.74.0"
protobuf = "6.31.1"

# Configuration
pydantic = "2.11.7"
pydantic-settings = "2.9.1"
python-dotenv = "1.1.0"

# NLP libraries
spacy = {version = ">=3.8.7,<4.0", python = ">=3.12,<3.14"}
nltk = "^3.9.2"
stanza = "^1.11.0"
pymorphy2 = "^0.9.1"

# Utilities
networkx = "3.5"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
