[project]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Dobrosvet",email = "dimaprokofev@yandex.ru"}
]
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "spacy (>=3.8.7,<4.0.0)",
    "spacy-transformers (>=1.3.9,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pyinflect (>=0.5.1,<0.6.0)",
    "torch (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.4.3"

