[tool.poetry]
name = "pdf-to-md-service"
version = "0.1.0"
description = "Микросервис для преобразования PDF в Markdown"
authors = ["Knowledge Map Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"
protobuf = "^4.25.1"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
marker-pdf = "^0.2.0"
pillow = "^10.1.0"
torch = "^2.1.0"
transformers = "^4.35.0"
accelerate = "^0.24.0"
safetensors = "^0.4.0"
click = "^8.1.7"
tqdm = "^4.66.1"
requests = "^2.31.0"
aiohttp = "^3.9.1"
pymupdf = "^1.23.0"
huggingface-hub = "^0.35.0"
lightgbm = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
