[tool.poetry]
name = "pdf-to-md-service"
version = "0.1.0"
description = "Микросервис для преобразования PDF в Markdown"
authors = ["Knowledge Map Team"]

[tool.poetry.dependencies]
python = "^3.11"
# Минимальные зависимости для gRPC сервера
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"
protobuf = "^4.25.1"
pydantic = "^2.5.0"

# Зависимости для PDF обработки (только необходимые)
marker-pdf = "^0.2.0"
pillow = "^10.1.0"
pymupdf = "^1.23.0"

# ML зависимости (оптимизированные версии)
torch = {version = "^2.1.0", extras = ["cpu"]}
transformers = "^4.35.0"
accelerate = "^0.24.0"
safetensors = "^0.4.0"
huggingface-hub = "^0.35.0"

# Утилиты
click = "^8.1.7"
tqdm = "^4.66.1"
requests = "^2.31.0"

# Опциональные зависимости для расширенной функциональности
fastapi = {version = "^0.104.1", optional = true}
uvicorn = {extras = ["standard"], version = "^0.24.0", optional = true}
aiofiles = {version = "^23.2.1", optional = true}
python-multipart = {version = "^0.0.6", optional = true}
aiohttp = {version = "^3.9.1", optional = true}
lightgbm = {version = "^4.0.0", optional = true}

[tool.poetry.extras]
web = ["fastapi", "uvicorn", "aiofiles", "python-multipart", "aiohttp"]
ml = ["lightgbm"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
