[tool.poetry]
name = "pdf-to-md-service"
version = "0.1.0"
description = "Микросервис для преобразования PDF в Markdown"
authors = ["Knowledge Map Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Web framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# gRPC
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"
protobuf = "^4.25.1"

# PDF processing
pillow = "^10.1.0"
pymupdf = "^1.23.0"
docling = "^2.53.0"

# ML dependencies (CPU optimized) - базовые версии
torch = {version = "^2.0.0", extras = ["cpu"]}
transformers = "^4.47.0"
accelerate = "^1.0.0"
safetensors = "^0.4.1"
huggingface-hub = "^0.26.0"

# Utilities
click = "^8.1.7"
tqdm = "^4.66.1"
requests = "^2.31.0"
aiofiles = "^23.2.1"

# S3/MinIO support
aioboto3 = "^12.0.0"
botocore = "^1.31.0"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
httpx = "^0.25.0"
coverage = "^7.3.0"
bandit = "^1.7.5"
safety = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
