[tool.poetry]
name = "pdf-to-text-service"
version = "0.1.0"
description = "Микросервис для преобразования PDF в текст с сохранением в Qdrant"
authors = ["Knowledge Map Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# gRPC
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3"
protobuf = "^4.25.1"

# PDF processing - только Docling
docling = "^2.53.0"

# Vector storage
qdrant-client = "^1.7.0"

# Text vectorization
sentence-transformers = "^2.2.2"

# ML dependencies (CPU optimized)
torch = {version = "^2.0.0", extras = ["cpu"]}
transformers = "^4.47.0"

# Utilities
click = "^8.1.7"
tqdm = "^4.66.1"
requests = "^2.31.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

