[project]
name = "worker-data-to-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Dobrosvet",email = "dimaprokofev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "neo4j (>=5.28.2,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "types-requests (>=2.32.0.20240905,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
