[tool.poetry]
name = "distributed-layout-worker"
version = "0.1.0"
description = "Распределённый воркер для укладки больших графов из Neo4j"
authors = ["Knowledge Map Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.0"
redis = "^5.0.0"
neo4j = "^5.13.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
psutil = "^5.9.0"
cython = "^3.0.0"
# numba = "^0.58.0"  # Removed due to Windows compilation issues
asyncio-throttle = "^1.0.2"
aioredis = "^2.0.0"
aiobreaker = "^1.2.0"
uvloop = {version = "^0.19.0", markers = "sys_platform != 'win32'"}
networkx = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80"
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]